Os lables foram atualizados para SysTagram.

--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="utf-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <title>Teste SysAdmin | Login</title>
+    <title>Teste SysTagram | Login</title>
     <!-- Tell the browser to be responsive to screen width -->
     <meta content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no" name="viewport" />
     <!-- Bootstrap 3.3.6 -->
@@ -28,11 +28,11 @@
 <body class="hold-transition login-page">
 <div class="login-box">
     <div class="login-logo">
-        <b>Sys</b>Admin
+        <b>Sys</b>Tagram
     </div>
     <!-- /.login-logo -->
     <div class="login-box-body">
-        <p class="login-box-msg">Login SysWeb 1.2.0</p>
+        <p class="login-box-msg">Login SysTagram 1.0.0</p>
 
         <div th:if="${param.error}">
             <div class="callout callout-danger">
