--- a/src/main/resources/templates/dashboard/indexUser.html
+++ b/src/main/resources/templates/dashboard/indexUser.html
@@ -6,6 +6,15 @@
 <title>Dashboard</title>
 </head>
 <body>
+
+<section layout:fragment="header">
+<h1>Dashboard</h1>
+<ol class="breadcrumb">
+    <li><a href="/"><i class="fa fa-dashboard"></i> Dashboard</a></li>
+    <li class="active">Dashboard</li>
+</ol>
+</section>
+
 	<div layout:fragment="content">
 
 		<div class="box box-default">
