Foi criada um primeiro esboço da gestão de comentários de usuário.

--- a/src/main/resources/templates/fragments/header.html
+++ b/src/main/resources/templates/fragments/header.html
@@ -34,6 +34,10 @@
 							<div class="col-xs-4 text-center">
 								<a th:href="${'/users/list'}">Usuários</a>
 							</div>
+							<div class="col-xs-4 text-center">
+								<a th:href="${'/person/' + loginuserid + '/comment'}">Comentários</a>
+							</div>
+							
 						</div> <!-- /.row -->
 					</li>
 
