--- a/src/main/resources/templates/fragments/mainsidebar.html
+++ b/src/main/resources/templates/fragments/mainsidebar.html
@@ -17,6 +17,9 @@
 			<ul class="treeview-menu">
 				<li><a href="/users"><i class="fa fa-circle-o"></i>Usuários</a></li>
 			</ul>
+			<ul class="treeview-menu">
+				<li><a href="/person/comment"><i class="fa fa-circle-o"></i>Comentários</a></li>
+			</ul>
 			
 		</li>
 		
