Foi criado um primeiro esboço para gerenciar fotos de usuário.

--- a/src/main/resources/templates/fragments/header.html
+++ b/src/main/resources/templates/fragments/header.html
@@ -37,6 +37,9 @@
 							<div class="col-xs-4 text-center">
 								<a th:href="${'/person/' + loginuserid + '/comment'}">Comentários</a>
 							</div>
+							<div class="col-xs-4 text-center">
+								<a th:href="${'/upload/person/' + loginuserid + '/picture'}">Fotos</a>
+							</div>
 							
 						</div> <!-- /.row -->
 					</li>
