--- a/src/main/resources/templates/dashboard/index.html
+++ b/src/main/resources/templates/dashboard/index.html
@@ -67,7 +67,7 @@
 					<span class="info-box-icon bg-green"><i class="fa fa-file-image-o"></i></span>
 					<div class="info-box-content">
 						<span class="info-box-text">Minhas Fotos</span> <span
-							class="info-box-number">4</span>
+							class="info-box-number" th:text="${totalPictures}"></span>
 					</div>
 					<!-- /.info-box-content -->
 				</div>
@@ -80,7 +80,7 @@
 					<span class="info-box-icon bg-purple"><i class="fa fa-comments-o"></i></span>
 					<div class="info-box-content">
 						<span class="info-box-text">Meus comentários</span> <span
-							class="info-box-number">3</span>
+							class="info-box-number" th:text="${totalComments}"></span>
 					</div>
 					<!-- /.info-box-content -->
 				</div>
@@ -218,41 +218,19 @@
             <!-- /.box-header -->
             <div class="box-body" style="">
               <ul class="products-list product-list-in-box">
-                <li class="item">
-                  <div class="product-img">
-                    <img src="../dist/img/default-50x50.gif" alt="Product Image" />
-                  </div>
-                  <div class="product-info">
-                    <a href="javascript:void(0)" class="product-title">Samsung TV</a>
-                    <span class="product-description">
-                          Samsung 32" 1080p 60Hz LED Smart HDTV.
-                        </span>
-                  </div>
-                </li>
-                <!-- /.item -->
-                <li class="item">
-                  <div class="product-img">
-                    <img src="../dist/img/default-50x50.gif" alt="Product Image" />
-                  </div>
-                  <div class="product-info">
-                    <a href="javascript:void(0)" class="product-title">Bicycle</a>
-                    <span class="product-description">
-                          26" Mongoose Dolomite Men's 7-speed, Navy Blue.
-                        </span>
-                  </div>
-                </li>
-                <!-- /.item -->
-                <li class="item">
-                  <div class="product-img">
-                    <img src="../dist/img/default-50x50.gif" alt="Product Image" />
-                  </div>
-                  <div class="product-info">
-                    <a href="javascript:void(0)" class="product-title">Xbox One </a>
-                    <span class="product-description">
-                          Xbox One Console Bundle with Halo Master Chief Collection.
-                        </span>
-                  </div>
-                </li>
+                
+                <li class="item" th:each="picture : ${person.pictures}">
+					<input id="id" name="id" th:value="${picture.id}" type="hidden" />  
+						<div class="product-img">
+							<img alt="Image" th:src="${'/upload/picture/'+picture.systemName}" width="50" height="50" />
+						</div>
+						<div class="product-info">
+                    		<a href="javascript:void(0)" class="product-title"><span th:text="${picture.name}"></span></a>
+                    			<span class="product-description" th:text="${picture.path}">
+                          		</span>	
+                  		</div>
+				</li>
+                
               </ul>
             </div>
             <!-- /.box-body -->
