Foi criado um primeiro esboço de post de foto de usuário.

--- a/src/main/resources/templates/dashboard/index.html
+++ b/src/main/resources/templates/dashboard/index.html
@@ -51,28 +51,29 @@
 			<div class="col-md-3 col-sm-6 col-xs-12">
 				<div class="info-box">
 					<!-- Apply any bg-* class to to the icon to color it -->
+					<span class="info-box-icon bg-green"><i class="fa fa-file-image-o"></i></span>
+					<div class="info-box-content">
+						<span class="info-box-text">Minhas Fotos</span> 
+						<span class="info-box-number" th:text="${totalPictures}"></span>
+					</div>
+					<!-- /.info-box-content -->
+				</div>
+				<!-- /.info-box -->
+			</div>
+
+			<div class="col-md-3 col-sm-6 col-xs-12">
+				<div class="info-box">
+					<!-- Apply any bg-* class to to the icon to color it -->
 					<span class="info-box-icon bg-blue"><i class="fa fa-star-o"></i></span>
 					<div class="info-box-content">
-						<span class="info-box-text">Minhas Anotações</span> <span
-							class="info-box-number">17</span>
+						<span class="info-box-text">Meus posts</span> 
+						<span class="info-box-number" th:text="${totalPosts}"></span>
 					</div>
 					<!-- /.info-box-content -->
 				</div>
 				<!-- /.info-box -->
 			</div>
 			
-			<div class="col-md-3 col-sm-6 col-xs-12">
-				<div class="info-box">
-					<!-- Apply any bg-* class to to the icon to color it -->
-					<span class="info-box-icon bg-green"><i class="fa fa-file-image-o"></i></span>
-					<div class="info-box-content">
-						<span class="info-box-text">Minhas Fotos</span> <span
-							class="info-box-number" th:text="${totalPictures}"></span>
-					</div>
-					<!-- /.info-box-content -->
-				</div>
-				<!-- /.info-box -->
-			</div>
 			
 			<div class="col-md-3 col-sm-6 col-xs-12">
 				<div class="info-box">
