--- a/src/main/resources/templates/fragments/header.html
+++ b/src/main/resources/templates/fragments/header.html
@@ -35,12 +35,11 @@
 								<a th:href="${'/users/list'}">Usuários</a>
 							</div>
 							<div class="col-xs-4 text-center">
-								<a th:href="${'/person/' + loginuserid + '/comment'}">Comentários</a>
-							</div>
-							<div class="col-xs-4 text-center">
 								<a th:href="${'/upload/person/' + loginuserid + '/picture'}">Fotos</a>
 							</div>
-							
+							<div class="col-xs-4 text-center">
+								<a th:href="${'/person/'} + ${loginuserid} + ${'/post'}">Posts</a>
+							</div>
 						</div> <!-- /.row -->
 					</li>
 
