Foi feito um refactory geral nos controladores para corrigir a passagem de dados de loginuser para as views do sistema. Além disso, foi concluída a primeira versão estável de submissão de posts para usuários de diferentes tipos de acesso.

--- a/src/main/resources/templates/fragments/header.html
+++ b/src/main/resources/templates/fragments/header.html
@@ -35,10 +35,10 @@
 								<a th:href="${'/users/list'}">Usuários</a>
 							</div>
 							<div class="col-xs-4 text-center">
-								<a th:href="${'/upload/person/' + loginuserid + '/picture'}">Fotos</a>
+								<a th:href="${'/upload/person/'} + ${loginuser.person.id} + ${'/picture'}">Fotos</a>
 							</div>
 							<div class="col-xs-4 text-center">
-								<a th:href="${'/person/'} + ${loginuserid} + ${'/post'}">Posts</a>
+								<a th:href="${'/person/'} + ${loginuser.person.id} + ${'/post'}">Posts</a>
 							</div>
 						</div> <!-- /.row -->
 					</li>
