--- a/src/main/resources/templates/uploads/listMyPictures.html
+++ b/src/main/resources/templates/uploads/listMyPictures.html
@@ -16,7 +16,7 @@
         <div class="box-header with-border">
             <h3 class="box-title">Listagem</h3>
             <div class="box-tools pull-right">
-                <a th:href="${'/person/'} + ${loginuserid} + ${'/select/picture'}" type="button" class="btn btn-box-tool"><i class="fa fa-plus"></i></a>
+                <a th:href="${'/person/'} + ${loginuser.person.id} + ${'/select/picture'}" type="button" class="btn btn-box-tool"><i class="fa fa-plus"></i></a>
                 <br clear="all" />
             </div>
         </div>
@@ -36,8 +36,8 @@
                     <td th:text="${row.path}"></td>
                     <td><img alt="Image" th:src="${'/upload/picture/'+row.systemName}" width="100" height="100" /></td>
                     <td>
-                        <a th:href="${'/person/'}+ ${loginuserid} + ${'/picture/'}+ ${row.id} + ${'/edit'}">Editar</a>-             
-                        <a th:href="${'/upload/delete/picture/'} + ${row.id} + ${'/person/'} + ${row.person.id}">Excluir</a>-
+                        <a href="#">Editar</a>-             
+                        <a href="#">Excluir</a>-
                         <a th:href="${'/person/'} + ${row.person.id} + ${'/picture/'} + ${row.id} + ${'/post'}">Postar</a>
                     </td>
                 </tr>
