Foram feitos os ajustes inciais para apontar as imagens para o bucket do S3 da amazon. Também foi criada uma classe para manipular um cliente S3 e permitir fazer o controle de uploads de arquivos no bucket do S3.

--- a/src/main/resources/templates/dashboard/index.html
+++ b/src/main/resources/templates/dashboard/index.html
@@ -190,7 +190,7 @@
                   <ul class="users-list clearfix">
 						<li th:each="user : ${listUsers}">
 							<input id="id" name="id" th:value="${user.id}" type="hidden" /> 
-							<img alt="Image" th:src="${'/upload/image/users/'+user.id}" width="128" height="128" /> 
+							<img alt="Image" th:src="${s3awsurl+'users/'+user.id+'.png'}" width="128" height="128" /> 
 							<a class="users-list-name" href="#"><spam th:text="${user.username}"></spam></a>
 						</li>
 				  </ul>
