--- a/src/main/resources/templates/users/list.html
+++ b/src/main/resources/templates/users/list.html
@@ -36,7 +36,7 @@
                     <td th:text="${row.person.name}"></td> 
                     <td th:text="${row.email}"></td>
                     <td th:text="${row.enabled}"></td>
-                    <td><img alt="Image" th:src="${'/upload/image/users/'+row.id}" width="50" height="50" /></td>
+                    <td><img alt="Image" th:src="${s3awsurl+'users/'+row.id+'.png'}" width="50" height="50" /></td>
                     <td>
                         <a th:href="${'/users/edit/' + row.id}">editar</a> -
                         <a th:href="${'/users/delete/' + row.id}">excluir</a>
