Foi feito um ajuste para deixar as imagens responsivas na listagem de posts.

--- a/src/main/resources/templates/person/listMyPosts.html
+++ b/src/main/resources/templates/person/listMyPosts.html
@@ -37,7 +37,7 @@
 					<!-- /.box-header -->
 					
 					<div class="box-body" style="">
-						<img alt="Image" th:src="${'/upload/picture/'} + ${row.picture.systemName}" />
+						<img class="img-responsive pad" alt="Image" th:src="${'/upload/picture/'} + ${row.picture.systemName}" />
 						<br></br>
               				<span class="description" th:text="${row.picture.name}"></span> 
               				<ul class="list-inline">
