--- a/src/main/resources/templates/users/list.html
+++ b/src/main/resources/templates/users/list.html
@@ -44,8 +44,25 @@
                 </tr>
             </table>
         </div>
-
     </div>
+    
+    <div class="box box-default">
+		<div class="box-header with-border">
+			<h3 class="box-title">Pesquisa</h3>
+			<div class="box-tools pull-right">
+				<div class="has-feedback">
+					<input type="text" class="form-control input-sm" placeholder="Search..."/> <span class="glyphicon glyphicon-search form-control-feedback"></span>
+				</div>
+			</div>
+					<!-- /.box-tools -->
+		</div>
+	<!-- /.box-header -->
+		<div class="box-body">
+			Faz a busca nos usuários registrados
+		</div>
+		<!-- /.box-body -->
+	</div>
+    
 </div>
 </body>
 </html>
