--- a/src/main/resources/templates/users/list.html
+++ b/src/main/resources/templates/users/list.html
@@ -49,13 +49,15 @@
     <div class="box box-default">
 		<div class="box-header with-border">
 			<h3 class="box-title">Pesquisa</h3>
-			<div class="box-tools pull-right">
-				<div class="has-feedback">
-					<input type="text" class="form-control input-sm" placeholder="Search..."/> <span class="glyphicon glyphicon-search form-control-feedback"></span>
-				</div>
-			</div>
+			<form enctype="application/x-www-form-urlencoded" method="post" th:action="${'/users/search'}">
+					<div>
+						<input type="text" class="form-control input-sm" placeholder="Search..." name="search" id="search"/> 
+						<span class="glyphicon glyphicon-search form-control-feedback"></span>
+					</div>
+			</form>
 					<!-- /.box-tools -->
 		</div>
+
 	<!-- /.box-header -->
 		<div class="box-body">
 			Faz a busca nos usuários registrados
