Correção de sessão inválida e sessão expirada.

--- a/src/main/resources/templates/invalidSession.html
+++ b/src/main/resources/templates/invalidSession.html
@@ -74,7 +74,7 @@
     </div>
 
                 <div class="error-page">
-                    <h2 class="headline text-yellow">404</h2>
+                    <h3 class="headline text-yellow">Sessão Inválida</h2>
 
                     <div class="error-content">
                         <h3>
