Foram feitas melhorias nos widgets do dashboard de admin e de usuário comum.

--- a/src/main/resources/templates/users/list.html
+++ b/src/main/resources/templates/users/list.html
@@ -40,6 +40,7 @@
                     <td>
                         <a th:href="${'/users/edit/' + row.id}">editar</a> -
                         <a th:href="${'/users/delete/' + row.id}">excluir</a>
+                        <a th:href="${'/person/' + row.person.id + '/post'}">posts</a>
                     </td>
                 </tr>
             </table>
