Foram feitas melhorias no Dashboard de admin e usuário comum.

--- a/src/main/resources/templates/users/list.html
+++ b/src/main/resources/templates/users/list.html
@@ -39,7 +39,8 @@
                     <td><img alt="Image" th:src="${s3awsurl+'users/'+row.id+'.png'}" width="50" height="50" /></td>
                     <td>
                         <a th:href="${'/users/edit/' + row.id}">editar</a> -
-                        <a th:href="${'/users/delete/' + row.id}">excluir</a>
+                        <a th:href="${'/users/delete/' + row.id}">excluir</a> -
+                        <a th:href="${'/person/' + row.person.id + '/post'}">posts</a>
                     </td>
                 </tr>
             </table>
