Implementação da feature #7 - paginação de usuários

--- a/src/main/resources/templates/users/list.html
+++ b/src/main/resources/templates/users/list.html
@@ -45,6 +45,16 @@
                 </tr>
             </table>
         </div>
+        <div class="box-footer clearfix">
+            <ul class="pagination pagination-sm no-margin pull-right">
+                <li><a href="/users/1">Primeira</a></li>
+                <li th:each="p : ${#numbers.sequence(1, endIndex/beginIndex)}" th:class="${p == currentIndex} ? 'active' : ''">
+                    <a th:href="${'/users/' + p}" th:text="${p}"></a>
+                </li>
+                <li><a th:href="${'/users/' + endIndex}">Última</a></li>
+            </ul>
+        </div>
+        
     </div>
     
     <div class="box box-default">
